--- a/stylanniv.css
+++ b/stylanniv.css
@@ -13,8 +13,9 @@ body {
 }
 audio {
     display: block;
-    margin: 20px auto;
+    margin: 20px 50px;
     width: 80%;
+    transform: translate(6%, 0%);
 }
 .container{
     position: relative;
@@ -25,7 +26,6 @@ audio {
 .anatxt{
     height: 50vw;
     max-width: 100%;
-    margin-top: 30px;
 }
 
 .coeur, .feux {
