--- a/stylanniv.css
+++ b/stylanniv.css
@@ -11,6 +11,13 @@ body {
     flex-direction: column;
     align-items: center;
 }
+
+H1{
+    text-align: center;
+    font-family: cursive;
+    color: rgb(255, 255, 255);
+    font-size: 5vw;
+}
 audio {
     display: block;
     margin: 20px 50px;
